Fix comment spacing issue

--- a/common/static/common/styles/studio/_comments.scss
+++ b/common/static/common/styles/studio/_comments.scss
@@ -31,7 +31,7 @@
 }
 
 .comment-section {
-  >.comment {
+  > .comments > .comment {
     margin-bottom: $spacer / 2;
   }
 
